Swap to hash routing

--- a/client/.github-pages-deploy.md
+++ b/client/.github-pages-deploy.md
@@ -50,6 +50,17 @@ Your site will be available at: `https://username.github.io/repository-name/`
 
 **Solution**: The `base: ''` configuration in `vite.config.ts` ensures relative paths.
 
+### ❌ 404 errors on page refresh (non-root routes)
+
+**Problem**: GitHub Pages doesn't support client-side routing for paths like `/authors/123`.
+
+**Solution**: ✅ **Hash routing implemented!** The app now uses hash-based routing:
+- `/#library` instead of `/library`
+- `/#authors/123` instead of `/authors/123`
+- `/#reader/456` instead of `/reader/456`
+
+This works perfectly on GitHub Pages because hash fragments are handled entirely by the browser.
+
 ### ❌ Blank page or console errors
 
 **Problem**: JavaScript modules not loading correctly.
